src/tests/test-src/errors/R7-file-rw-mode.syntran
// R7: file-rw-mode
// open() was given a mode string combining r and w, which isn't supported

let f = open("build/rt_file_r7.txt", "rw");
